make DBG_UNHANDLED_EXCEPTION no-op if SAL_LOG_WARN is not enabled

ee0e19296b959b4545b094f49a8b0c0b5463 make the macro unconditional,
but that means it calls both DbgUnhandledException() and
DbgGetCaughtException(), and then log it as SAL_WARN that's
a no-op. With the document from tdf#105036 it added ~13% CPU time.

Change-Id: I9360169e6e3976d40271bc5602765e56f58971d4